--- a/style.css
+++ b/style.css
@@ -5,12 +5,14 @@ body {
 	font-size: 18px;
 	text-align: center;
 	line-height: 28px;
+	margin: 0 auto;
 
 }
 
 header {
 	background-color: #ebebeb;
-	padding: 28px;
+	padding: 30px;
+	margin-top:10px;
 	margin-bottom: 10px;
 	align-content: center;
 
@@ -18,39 +20,42 @@ header {
 
 nav {
 	background-color: #ebebeb;
-	padding: 28px;
-	margin-bottom: 10px;
+	padding: 30px;
+	margin-bottom: 20px;
 
 }
 
 .section {
 	background-color: #ebebeb;
-	padding: 10px;
+	padding: 20px 10px 10px 10px;
 	float: left;
 	width: 495px;
-	height: 200px;
-
+	height: 240px;
+	margin-bottom: 20px;
 }
 
 #article {
 	background-color: #777;
 	height: 160px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	margin-top: 20px;
 	color: #ebebeb;
 
 }
 
 #hid {
 	background-color: #ebebeb;
-	padding: 5px;
-	margin: 10px;
+	padding: 10px 0px 10px 0px;
+	margin: 10px 20px;
 	color: #000000;
 
 }
 
 #pid {
 	background-color: #ebebeb;
-	padding: 5px;
-	margin: 10px;
+	padding: 10px 0px 10px 0px;
+	margin: 10px 20px;
 	color: #000000;
 
 }
@@ -58,8 +63,11 @@ nav {
 #aside {
 	background-color: #ebebeb;
 	float: left;
-	width: 445px;
-	height: 220px;
+	padding:20px 0px 0px 0px;
+	width: 425px;
+	height: 240px;
+	margin-left: 20px;
+	margin-bottom: 0px;
 		
 }
 
@@ -67,8 +75,8 @@ footer {
 	background-color: #ebebeb;
 	clear: both;
 	overflow: auto;
-	padding: 28px;
-	margin-top: 20px;
+	padding: 30px;
+	margin-top: 0px;
 	margin-bottom: 0px;
 
 }
