--- a/style.css
+++ b/style.css
@@ -30,13 +30,13 @@ nav {
 	padding: 20px 10px 10px 10px;
 	float: left;
 	width: 495px;
-	height: 240px;
+	height: 250px;
 	margin-bottom: 20px;
 }
 
 #article {
 	background-color: #777;
-	height: 160px;
+	height: 180px;
 	padding-top: 10px;
 	padding-bottom: 10px;
 	margin-top: 20px;
@@ -49,6 +49,7 @@ nav {
 	padding: 10px 0px 10px 0px;
 	margin: 10px 20px;
 	color: #000000;
+	font-weight: bold;
 
 }
 
@@ -65,9 +66,9 @@ nav {
 	float: left;
 	padding:20px 0px 0px 0px;
 	width: 425px;
-	height: 240px;
+	height: 260px;
 	margin-left: 20px;
-	margin-bottom: 0px;
+	margin-bottom: 20px;
 		
 }
 
